--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ body{
     width: 40px;
     margin-right: 10px;
 }
-.humidity, .wind{
+.humidity, .wind, .visibility{
     font-size: 28px;
     margin-top: -6px;
 }
@@ -91,3 +91,11 @@ body{
   margin-top: 10px;
   display: none;  
 }
+.subdetails{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 20px;
+    margin-top: 50px;
+    margin-left: 100px;
+  }
